--- a/css/style.css
+++ b/css/style.css
@@ -14,17 +14,17 @@ body {
 }
 
 .main-header {
-  margin: 50px 0;
-  padding: 10px;
+  margin: 4rem 0;
+  padding: 1rem;
   text-align: center;
-  background-color: gainsboro;
 }
 
 .section {
-  background-color: gray;
-  margin: 10px;
-  padding: 20px;
+  background-color: #b3b3b3;
+  margin: 1rem;
+  padding: 2rem;
   position: relative;
+  border: 2px solid black;
 }
 
 .section-title {
@@ -37,6 +37,7 @@ body {
   background-color: #ad5555;
   color: whitesmoke;
   padding: 10px 10px;
+  padding-bottom: 0;
 }
 
 .section-paragraph {
@@ -45,6 +46,21 @@ body {
 
 /* Mobile devices */
 @media (max-width: 767px) {
+  .main-header {
+    font-size: 4rem;
+  }
+
+  .section {
+    line-height: 1.8;
+  }
+
+  .section-title {
+    font-size: 2.8rem;
+  }
+
+  .section-paragraph {
+    font-size: 2.4rem;
+  }
 
   .col-sm-1,
   .col-sm-2,
@@ -83,6 +99,19 @@ body {
 /* Tablets */
 @media (min-width: 768px) and (max-width: 991px) {
 
+  .main-header {
+    font-size: 3.5rem;
+  }
+
+  .section {
+    font-size: 2rem;
+    line-height: 1.6;
+  }
+
+  .section-title {
+    font-size: 3rem;
+  }
+
   .col-md-1,
   .col-md-2,
   .col-md-3,
@@ -119,6 +148,18 @@ body {
 
 /* Laptops */
 @media (min-width: 992px) {
+
+  .main-header {
+    font-size: 3rem;
+  }
+
+  .section {
+    font-size: 2rem;
+  }
+
+  .section-title {
+    font-size: 3rem;
+  }
 
   .col-lg-1,
   .col-lg-2,
